--- a/PGtkArticulo/PGtkArticulo/PGtkArticulo.csproj
+++ b/PGtkArticulo/PGtkArticulo/PGtkArticulo.csproj
@@ -77,6 +77,7 @@
     <Compile Include="gtk-gui\MainWindow.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="TreeViewFiller.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
